# dump

./: .gitignore  AUTHORS  CHANGES  COPYRIGHT  ChangeLog  INSTALL  KNOWNBUGS  MAINTAINERS  MCONFIG.in  Makefile.am  Makefile.in  NEWS  README  REPORTING-BUGS  THANKS  TODO  acconfig.h  autogen.sh  config.h.in  configure  configure.ac  configure.in  debian-patch  depfix.sed  dump-0.2.announce  dump-0.2a.announce  dump-0.2b.announce  dump-0.2c.announce  dump-0.2d.announce  dump-0.2e.announce  dump-0.3.announce  dump-0.4b1.announce  dump.lsm  dump.lsm.in  dump.spec  linux-1.2.x.patch
common/: .gitignore  Makefile.am  Makefile.in  dumprmt.c  indexer.h  indexer_test.c  legacy_indexer.c  slave.h  sqlite_indexer.c  transformation.h  transformation_bzlib.c  transformation_lzo.c  transformation_null.c  transformation_ssl.c  transformation_zlib.c
compat/include/: Makefile.in  bsdcompat.h  bylabel.h  compaterr.h  compatglob.h  compatlfs.h  darwin.h  err.h  fstab.h  glob.h  pathnames.h  pathnames.h.in  rmtflags.h  system.h  tzfile.h
compat/include/protocols/: dumprestore.h
compat/lib/: Makefile.am  Makefile.in  README2.LZO  bylabel.c  compaterr.c  compatglob.c  err.c  fstab.c  glob.c  rmtflags.c  system.c
dump/: .gitignore  Makefile.am  Makefile.in  dump.8  dump.8.in  dump.h  itime.c  main.c  optr.c  rdump.8  tape.c  traverse.c  unctime.c
examples/cron_dump_to_disk/: backup  backup_rotate
examples/dump_on_cd_2/DE/: backup_DVD  dump_userexit_CD  dump_userexit_DVD
examples/dump_on_cd_2/EN/: backup_CD  backup_DVD  dump_userexit_CD  dump_userexit_DVD
examples/dump_on_cd_3/: README  dump_disk
examples/howto/: ultra-mini-howto
examples/remote_backup_ssh/: backitup
restore/: .gitignore  Makefile.am  Makefile.in  dirs.c  extern.h  interactive.c  main.c  restore.8  restore.8.in  restore.c  restore.h  rrestore.8  symtab.c  tape.c  utilities.c  xattr.c
rmt/: .gitignore  Makefile.am  Makefile.in  cipher.c  ermt.c  rmt.8  rmt.8.in  rmt.c
testing/: Makefile.in
testing/scripts/: quick-regression.sh
