ACLOCAL_AMFLAGS = -I m4

SUBDIRS = compat/lib common dump restore
if BUILD_RMT
SUBDIRS += rmt
endif

EXTRA_DIST = \
	dump.lsm KNOWNBUGS MAINTAINERS REPORTING-BUGS \
	examples/remote_backup_ssh/backitup \
	examples/howto/ultra-mini-howto \
	examples/encrypted_rmt/README \
	examples/dump_on_cd_2/README \
	examples/dump_on_cd_2/DE/dump_userexit_CD \
	examples/dump_on_cd_2/DE/backup_DVD \
	examples/dump_on_cd_2/DE/backup_CD \
	examples/dump_on_cd_2/DE/dump_userexit_DVD \
	examples/dump_on_cd_2/EN/dump_userexit_CD \
	examples/dump_on_cd_2/EN/backup_DVD \
	examples/dump_on_cd_2/EN/backup_CD \
	examples/dump_on_cd_2/EN/dump_userexit_DVD \
	examples/cron_dump_to_disk/README \
	examples/cron_dump_to_disk/backup_rotate \
	examples/cron_dump_to_disk/backupskel.tar.gz \
	examples/cron_dump_to_disk/backup \
	examples/cron_dump_to_disk/crontab_entries.txt \
	examples/dump_on_remote_cd/README \
	examples/dump_on_remote_cd/get-dumpdata-to-cdrecord \
	examples/dump_on_remote_cd/dump-to-remote-cd \
	examples/dump_on_cd/README \
	examples/dump_on_cd/start_dump.sh \
	examples/dump_on_cd/dump_userinfo.sh \
	examples/dump_on_cd/verify_dump.sh \
	examples/dump_on_cd_3/README \
	examples/dump_on_cd_3/dump_disk
